--- a/values.yaml
+++ b/values.yaml
@@ -35,6 +35,7 @@ serviceAccount:
 
 useExternalConfig: false
 externalConfigSecretName: "secret-with-config.yaml"
+externalConfigVersion: "0"
 config:
   auth_enabled: false
   ingester:
