--- a/templates/distributor/distributor-dep.yaml
+++ b/templates/distributor/distributor-dep.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "cortex.distributorFullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "cortex.distributorLabels" . | nindent 4 }}
     app.kubernetes.io/part-of: memberlist
