--- a/templates/nginx/nginx-poddisruptionbudget.yaml
+++ b/templates/nginx/nginx-poddisruptionbudget.yaml
@@ -3,6 +3,7 @@ apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
   name: {{ include "cortex.nginxFullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "cortex.nginxLabels" . | nindent 4 }}
 spec:
