--- a/templates/alertmanager/alertmanager-svc.yaml
+++ b/templates/alertmanager/alertmanager-svc.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "cortex.alertmanagerFullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "cortex.alertmanagerLabels" . | nindent 4 }}
     {{- with .Values.alertmanager.service.labels }}
