--- a/templates/compactor/compactor-svc.yaml
+++ b/templates/compactor/compactor-svc.yaml
@@ -4,6 +4,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "cortex.compactorFullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "cortex.compactorLabels" . | nindent 4 }}
     {{- with .Values.compactor.service.labels }}
