--- a/templates/configs/configs-poddisruptionbudget.yaml
+++ b/templates/configs/configs-poddisruptionbudget.yaml
@@ -3,6 +3,7 @@ apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
   name: {{ include "cortex.configsFullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "cortex.configsLabels" . | nindent 4 }}
 spec:
