--- a/templates/configs/configs-servicemonitor.yaml
+++ b/templates/configs/configs-servicemonitor.yaml
@@ -3,6 +3,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: {{ include "cortex.configsFullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "cortex.configsLabels" . | nindent 4 }}
     {{- if .Values.configs.serviceMonitor.additionalLabels }}
