--- a/templates/configs/configs-svc.yaml
+++ b/templates/configs/configs-svc.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "cortex.configsFullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "cortex.configsLabels" . | nindent 4 }}
     {{- with .Values.configs.service.labels }}
