--- a/templates/distributor/distributor-servicemonitor.yaml
+++ b/templates/distributor/distributor-servicemonitor.yaml
@@ -3,6 +3,7 @@ apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
   name: {{ include "cortex.distributorFullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "cortex.distributorLabels" . | nindent 4 }}
     {{- if .Values.distributor.serviceMonitor.additionalLabels }}
