--- a/templates/distributor/distributor-svc.yaml
+++ b/templates/distributor/distributor-svc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "cortex.distributorFullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "cortex.distributorLabels" . | nindent 4 }}
     {{- with .Values.distributor.service.labels }}
