--- a/templates/ingester/ingester-svc-headless.yaml
+++ b/templates/ingester/ingester-svc-headless.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "cortex.ingesterFullname" . }}-headless
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "cortex.ingesterLabels" . | nindent 4 }}
     {{- with .Values.ingester.service.labels }}
