--- a/templates/nginx/nginx-svc.yaml
+++ b/templates/nginx/nginx-svc.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "cortex.nginxFullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "cortex.nginxLabels" . | nindent 4 }}
     {{- with .Values.nginx.service.labels }}
