--- a/templates/querier/querier-dep.yaml
+++ b/templates/querier/querier-dep.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "cortex.querierFullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "cortex.querierLabels" . | nindent 4 }}
   annotations:
