--- a/templates/querier/querier-svc.yaml
+++ b/templates/querier/querier-svc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "cortex.querierFullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "cortex.querierLabels" . | nindent 4 }}
     {{- with .Values.querier.service.labels }}
