--- a/templates/query-frontend/query-poddisruptionbudget.yaml
+++ b/templates/query-frontend/query-poddisruptionbudget.yaml
@@ -3,6 +3,7 @@ apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
   name: {{ include "cortex.queryFrontendFullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "cortex.queryFrontendLabels" . | nindent 4 }}
 spec:
