--- a/templates/secret-postgresql.yaml
+++ b/templates/secret-postgresql.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ template "cortex.fullname" . }}-postgresql
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "cortex.labels" . | nindent 4 }}
 data:
