--- a/templates/serviceaccount.yaml
+++ b/templates/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ template "cortex.serviceAccountName" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "cortex.labels" . | nindent 4 }}
   annotations:
