--- a/templates/store-gateway/store-gateway-poddisruptionbudget.yaml
+++ b/templates/store-gateway/store-gateway-poddisruptionbudget.yaml
@@ -3,6 +3,7 @@ apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
   name: {{ include "cortex.storeGatewayFullname" . }}
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "cortex.storeGatewayLabels" . | nindent 4 }}
 spec:
