--- a/templates/svc-memberlist-headless.yaml
+++ b/templates/svc-memberlist-headless.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "cortex.fullname" . }}-memberlist
+  namespace: {{ .Release.Namespace }}
   labels:
     {{- include "cortex.labels" . | nindent 4 }}
 spec:
