add autoscaler for queriers
Signed-off-by: Tom Hayward <thayward@infoblox.com>

--- a/ci/test-values.yaml
+++ b/ci/test-values.yaml
@@ -67,5 +67,8 @@ distributor:
   autoscaling:
     enabled: true
     minReplicas: 1
+querier:
+  autoscaling:
+    enabled: true
 nginx:
   replicas: 1
