--- a/templates/nginx/nginx-config.yaml
+++ b/templates/nginx/nginx-config.yaml
@@ -1,6 +1,5 @@
 {{- if .Values.nginx.enabled }}
-{{- $rootDomain := printf "%s.svc.%s:%v" .Release.Namespace .Values.clusterDomain .Values.config.server.http_listen_port }}
-
+{{- $rootDomain := printf "%s.svc.%s:%d" .Release.Namespace .Values.clusterDomain (.Values.config.server.http_listen_port | int) }}
 kind: ConfigMap
 apiVersion: v1
 metadata:
@@ -103,9 +102,9 @@ data:
         location ~ {{.Values.config.api.prometheus_http_prefix}}/api/v1/label/.* {
           proxy_pass      http://{{ template "cortex.fullname" . }}-query-frontend.{{ $rootDomain }}$request_uri;
         }
-        {{- if and (.Values.config.auth_enabled) (.Values.config.auth_orgs) }}
+        {{- if and (.Values.config.auth_enabled) (.Values.nginx.config.auth_orgs) }}
         # Auth orgs
-        {{- range $org := compact .Values.config.auth_orgs | uniq }}
+        {{- range $org := compact .Values.nginx.config.auth_orgs | uniq }}
         location = /api/v1/push/{{ $org }} {
           proxy_set_header      X-Scope-OrgID {{ $org }};
           proxy_pass      http://{{ template "cortex.fullname" $ }}-distributor.{{ $rootDomain }}$request_uri;
