--- a/values.yaml
+++ b/values.yaml
@@ -1115,7 +1115,8 @@ nginx:
     ## ref: http://nginx.org/en/docs/http/ngx_http_core_module.html#client_max_body_size
     client_max_body_size: 1M
     setHeaders: {}
-      # X-Scope-OrgID: 0
+    # -- (optional) List of [auth tenants](https://cortexmetrics.io/docs/guides/auth/) to set in the nginx config
+    auth_orgs: []
   image:
     repository: nginx
     tag: 1.21
