graceful shutdown of ingesters
Signed-off-by: Tom Hayward <thayward@infoblox.com>

--- a/templates/ingester/ingester-statefulset.yaml
+++ b/templates/ingester/ingester-statefulset.yaml
@@ -151,4 +151,9 @@ spec:
             {{- if .Values.ingester.env }}
               {{- toYaml .Values.ingester.env | nindent 12 }}
             {{- end }}
+          lifecycle:
+            preStop:
+              httpGet:
+                path: "/ingester/shutdown"
+                port: {{ .Values.config.server.http_listen_port }}
 {{- end -}}
