--- a/templates/ingester/ingester-dep.yaml
+++ b/templates/ingester/ingester-dep.yaml
@@ -103,6 +103,11 @@ spec:
             {{- if .Values.ingester.env }}
             {{ toYaml .Values.ingester.env | nindent 12 }}
             {{- end }}
+          lifecycle:
+            preStop:
+              httpGet:
+                path: "/ingester/shutdown"
+                port: {{ .Values.config.server.http_listen_port }}
         {{- with .Values.ingester.extraContainers }}
         {{ toYaml . | nindent 8 }}
         {{- end }}
