--- a/templates/ingester/ingester-dep.yaml
+++ b/templates/ingester/ingester-dep.yaml
@@ -103,11 +103,10 @@ spec:
             {{- if .Values.ingester.env }}
             {{ toYaml .Values.ingester.env | nindent 12 }}
             {{- end }}
+          {{- with .Values.ingester.lifecycle }}
           lifecycle:
-            preStop:
-              httpGet:
-                path: "/ingester/shutdown"
-                port: {{ .Values.config.server.http_listen_port }}
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
         {{- with .Values.ingester.extraContainers }}
         {{ toYaml . | nindent 8 }}
         {{- end }}
