--- a/templates/ingester/ingester-statefulset.yaml
+++ b/templates/ingester/ingester-statefulset.yaml
@@ -151,9 +151,8 @@ spec:
             {{- if .Values.ingester.env }}
               {{- toYaml .Values.ingester.env | nindent 12 }}
             {{- end }}
+          {{- with .Values.ingester.lifecycle }}
           lifecycle:
-            preStop:
-              httpGet:
-                path: "/ingester/shutdown"
-                port: {{ .Values.config.server.http_listen_port }}
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
 {{- end -}}
