--- a/templates/alertmanager/alertmanager-svc-headless.yaml
+++ b/templates/alertmanager/alertmanager-svc-headless.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.alertmanager.enabled -}}
 {{- if .Values.alertmanager.statefulSet.enabled -}}
-{{- $clusterPort := regexReplaceAll ".+[:]" (default "0.0.0.0:9094" .Values.config.alertmanager.cluster_bind_address) "" -}}
+{{- $clusterPort := regexReplaceAll ".+[:]" .Values.config.alertmanager.cluster.listen_address "" -}}
 apiVersion: v1
 kind: Service
 metadata:
@@ -20,8 +20,12 @@ spec:
   ports:
     - port: {{ $clusterPort }}
       protocol: TCP
-      name: cluster
-      targetPort: cluster
+      name: cluster-tcp
+      targetPort: cluster-tcp
+    - port: {{ $clusterPort }}
+      protocol: UDP
+      name: cluster-udp
+      targetPort: cluster-udp
   selector:
     {{- include "cortex.alertmanagerSelectorLabels" . | nindent 4 }}
 {{- end -}}
